feature: add random word and display hint on page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
            <h4>Game Over!</h4> 
            <p>The word was: <b>frontal</b> </p>
            <button class="new-game">Try Again</button>
-
         </div>
       </div>
       <div class = "inner-box">
@@ -42,9 +41,11 @@
           </div>
 
           <div class="game-box">
-            <div class="game-word"> 
+             <div class="game-word"> 
                 <!-- letters of the word will be populated by JavaScript -->
-            </div>
+                <span class="letter"></span>
+                <span class="letter"></span>
+             </div>
               <h4 class="wrong-answers">
                   <small>Incorrect:</small>
                   <small><b>0 / 10</b></small>
