add correct letter identifing function and pop up for inccorect letter

--- a/index.html
+++ b/index.html
@@ -42,9 +42,13 @@
 
           <div class="game-box">
              <div class="game-word"> 
-                <!-- letters of the word will be populated by JavaScript -->
-                <span class="letter"></span>
-                <span class="letter"></span>
+                <input type="text" class="letter"></input>
+                <input type="text" class="letter"></input>
+                <input type="text" class="letter"></input>
+                <input type="text" class="letter"></input>
+                <input type="text" class="letter"></input>
+                <input type="text" class="letter"></input>
+                <input type="text" class="letter"></input>
              </div>
               <h4 class="wrong-answers">
                   <small>Incorrect:</small>
