add hangman image replacement function and game over, reset fucntion

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="game-end">
         <div class="content">
            <h4>Game Over!</h4> 
-           <p>The word was: <b>frontal</b> </p>
+           <p>The word was: <b></b> </p>
            <button class="new-game">Try Again</button>
         </div>
       </div>
