add incorrect and correct guess count, add html and css for reset button

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
            <button class="new-game">Try Again</button>
         </div>
       </div>
+      <div class="game-yay">
+        <div class="content">
+           <h4>Yay! You got it!</h4> 
+           <button class="new-game">Next Word >></button>
+        </div>
+      </div>
       <div class = "inner-box">
           <div class = "hangman-box">
              <img src = "assets/images/hangman-0.svg" alt="empty-hangman-img">
@@ -52,12 +58,13 @@
              </div>
               <h4 class="wrong-answers">
                   <small>Incorrect:</small>
-                  <small><b>0 / 10</b></small>
+                  <small><b>0</b></small>
               </h4>
               <h4 class="right-answers">
                 <small>Correct:</small>
-                <small><b>0 / 10</b></small>
+                <small><b>0</b></small>
               </h4>
+              <button class="reset">New Game</button>
           </div>
         </div>
 
