feature:add new game function, debug:new game button stopped scoring, conflict with class 'new-game'.

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         <div class="content">
            <h4>Game Over!</h4> 
            <p>The word was: <b></b> </p>
-           <button class="new-game">Try Again</button>
+           <button class="new-round">Try Again</button>
         </div>
       </div>
       <div class="game-yay">
         <div class="content">
            <h4>Yay! You got it!</h4> 
-           <button class="new-game">Next Word >></button>
+           <button class="new-round">Next Word >></button>
         </div>
       </div>
       <div class = "inner-box">
