--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Enjoy the classic word-guessing game online! Test your anatomy vocabulary skills with AnatomyMan. Guess the hidden word, avoid the hangman's noose. Great as a study tool!">
     <title>AnatomyMan</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -43,18 +44,18 @@
       </div>
       <div class = "inner-box">
           <div class = "hangman-box">
-             <img src = "assets/images/hangman-0.svg" alt="empty-hangman-img">
+             <img src = "assets/images/hangman-0.svg" alt="empty-hangman-img" aria-label="hangman image">
           </div>
 
           <div class="game-box">
              <div class="game-word"> 
-                <input type="text" class="letter"></input>
-                <input type="text" class="letter"></input>
-                <input type="text" class="letter"></input>
-                <input type="text" class="letter"></input>
-                <input type="text" class="letter"></input>
-                <input type="text" class="letter"></input>
-                <input type="text" class="letter"></input>
+                <input type="text" class="letter" aria-label="Letter input field">
+                <input type="text" class="letter" aria-label="Letter input field">
+                <input type="text" class="letter" aria-label="Letter input field">
+                <input type="text" class="letter" aria-label="Letter input field">
+                <input type="text" class="letter" aria-label="Letter input field">
+                <input type="text" class="letter" aria-label="Letter input field">
+                <input type="text" class="letter" aria-label="Letter input field">
              </div>
               <h4 class="wrong-answers">
                   <small>Incorrect:</small>
