correct grammar errors

--- a/instructions.html
+++ b/instructions.html
@@ -34,7 +34,7 @@
     <section>
         <div class = "text-center" id="objectives">
             <h1>Game Objectives</h1>
-            <p>The object of hangman is to guess the secret word before the stick figure is hung.</p>
+            <p>The object of hangman is to guess the secret word before the stick figure is hanged.</p>
             <p>The words are terms linked to Anatomy and this game can be used as a study tool .</p>
         </div>
 
@@ -42,10 +42,10 @@
             <h1>Let's Play!</h1>
             <p>The game will start automatically. There will be a simple hint, that gives you a clue about the word you have to guess.</p>
             <p>A score of your correct and incorrect answers will tally and be displayed.</p>
-            <p>Guess the letters that you think fits in the word, if the letter you guessed is apart of the word, it will go green and will not be able to be chnaged.</p>
+            <p>Guess the letters that you think fits in the word, if the letter you guessed is in the word, it will go green and will not be able to be changed.</p>
             <p>If the letter you guessed does not belong in the word, a part of the stick man will appear on the hangman platform.</p>
-            <p>If you make too many wrong guesses, your stick man will be hanged and that is Game Over.</p>
-            <p>You can reset the game at any point by clicking the 'Reset' button.</p>
+            <p>If you make 6 wrong guesses, your stick man will be hanged and that is Game Over.</p>
+            <p>You can reset the game at any point by clicking the 'New Game' button.</p>
         </div>
     </section>
 
